--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 		<repository>
 			<id>prime-repo</id>
 			<name>PrimeFaces Maven Repository</name>
-			<url>http://repository.primefaces.org</url>
+			<url>https://repository.primefaces.org</url>
 			<layout>default</layout>
 		</repository>
 	</repositories>
@@ -90,7 +90,7 @@
 		<pluginRepository>
 			<id>doodleproject-repo</id>
 			<name>DoodleProject Maven 2 Repository</name>
-			<url>http://doodleproject.sourceforge.net/maven2/release</url>
+			<url>https://doodleproject.sourceforge.net/maven2/release</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
